@@ -10,6 +10,8 @@
     * init_dirscan's search for Makefile.PL's will no longer look
       inside a distdir.
     * Fixed running tests when there are t/'s in subdirs.
+    - MM_DOS inheriting from MM_Unix instead of MM_Win32.  DJGPP
+      appears to be unix-like (bleadperl@15650)
 
     [[ Internals ]]
     - INST_* constants moved to init_INST exept for INST_MAN* which
@@ -181,7 +183,7 @@
 5.48_04 Mon Jan 21 19:28:38 EST 2002
     - No longer requiring Test::More
     - Now tested to work with a clean 5.6.1
-    - Stripped out $Revision: 1.31 $ based $VERSIONs.
+    - Stripped out $Revision: 1.32 $ based $VERSIONs.
     - Rolled in patches from p5p, vmsperl & VOS (14325, 14338, 14360, 14364)
     * hint files now run in a safer context.  Only $self is available.
     - ExtUtils::testlib now provides absolute paths into @INC.
